--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,4 +24,7 @@ jobs:
       - name: Say Hello
         run: |
           python hello.py
+        env:
+          GIT_ACTION_SECRET: \$
+          
           
