--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,6 +25,6 @@ jobs:
         run: |
           python hello.py
         env:
-          GIT_ACTION_SECRET: \$
+          GIT_ACTION_SECRET: ${{ secrets.GIT_ACTION_SECRET}}
           
           
