--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,7 +6,7 @@ on:
   pull_request:
     branches: [ "main" ]
   schedule:
-    - cron: '0 0 * * *'
+    - cron: '0 0 1 * *'
 
 jobs:
   build:
@@ -20,11 +20,8 @@ jobs:
       - name: Install Dependency
         run: |
           python -m pip install --upgrade pip
-          if [ -f requirements.txt]; then pip install -r requirements.txt; fi
-      - name: Say Hello
-        run: |
-          python hello.py
-      - name: Get Hadoop Relase Note Contents
+          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+      - name: Get Hadoop Release Note Contents
         run: |
           python main.py
         env:
